k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-service
  labels:
    name: user-service
    app: user-service-backend
