k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  namespace: user-service
  labels:
    app: user-service-backend
spec:
  selector:
    app: user-service-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
